...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ingredients_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/headers_height"
            android:background="@color/card_background"
            android:elevation="1dp"
            android:fontFamily="serif"
            android:paddingLeft="20dp"
...
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_list" />

        <include
            layout="@layout/steps_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/steps_header"
            app:layout_constraintStart_toStartOf="@+id/steps_header"
            app:layout_constraintTop_toBottomOf="@+id/steps_header" />

...
