<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bake_it</string>

    <string name="example_description" tools:ignore="TypographyFractions">2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt </string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="tap_to_select_a_recipe">Tap to select a recipe…</string>
    <string name="main_list_empty_text">Please check your internet connection, then pull to refresh.</string>
    <string name="recipe_image">recipe_image</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps_header">Steps</string>

</resources>
